Refactor Search Event and Setup Payment Gateway
